--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ dashmap = "6.1.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 anyhow = "1.0.100"
+tower-http = { version = "0.6.6", features = ["cors"] }
 rand = "0.9.2"
 reqwest = { version = "0.12.24", features = ["json"] }
